tests/negative/key_on_non_object.urb
n = [1],
n["a"] = 1,
